--- a/app/templates/Healty.html
+++ b/app/templates/Healty.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
         integrity="sha384-VCmXjywReHh4PwowAiWNagnWcLhlEJLA5buUprzK8rxFgeH0kww/aWY76TfkUoSX" crossorigin="anonymous">
 
-    <title>PRAKIRAAN PENYAKIT DAUN CABAI</title>
+    <!-- Poppins Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <title>Prediksi Penyakit</title>
 
 
      <!--    Favicons-->
@@ -36,12 +39,11 @@
     </style>
 </head>
 
-<body background="{{url_for('static',filename = '/img/illustrations/how-it-works.png')}}">
-
-
+    <body background="{{url_for('static',filename = '/img/illustrations/how-it-works.png')}}">
 
     <div>
-        <h1 style="text-align:center;font-size:4rem">Prediksi Penyakit Daun Cabai & Obatnya</h1>
+        <br>
+        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Obatnya</h1>
     </div>
 
    <br>
@@ -62,7 +64,7 @@
             <div class="col-sm">
 
                 <div>
-                    <h1 style="padding: 15px; background-color: rgb(15, 15, 15); color: white;"
+                    <h1 style="padding: 15px; background-color: rgb(252, 255, 253); color: rgb(63, 170, 9);"
                         class="text-center mb-5 content-h1 rounded">
                         {{pred_output}} </h1>
                 </div>
